--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -30,10 +30,25 @@
   box-shadow: 1px 1px 2px #d9d9d9, -1px 1px 2px #d9d9d9;
   display: inline-block;
   border-radius: 2px;
+  border: none;
+  font-size: 12px;
+  background-color: transparent;
 }
 
 .buttonRow {
   display: flex;
+}
+
+.close {
+  color: #b1b1b1;
+  position: absolute;
+  top: 0.7rem;
+  right: 0.7rem;
+  font-size: 12px;
+  line-height: 0.8em;
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
 }
 
 @media (min-width: 768px) {
