--- a/src/components/Input/Input.module.css
+++ b/src/components/Input/Input.module.css
@@ -1,4 +1,4 @@
-.eventInput {
+.input {
   border: 1px solid #ebebeb;
   box-shadow: 1px 2px 2px #d3d3d3 inset, -1px -1px 2px #d3d3d3 inset;
   padding-left: 1em;
@@ -9,6 +9,6 @@
   border-radius: 2px;
 }
 
-.eventInput::placeholder {
+.input::placeholder {
   color: #b1b1b1;
 }
