--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -1,6 +1,6 @@
 .eventForm {
   padding: 1.4em;
-  box-shadow: 3px 3px 5px #d9d9d9, -3px 3px 5px #d9d9d9;
+  box-shadow: 3px 3px 5px #d9d9d9, -3px -3px 5px #d9d9d9;
   display: none;
   position: absolute;
   left: calc(100% + 15px);
@@ -17,7 +17,8 @@
 .row {
   width: 100%;
   height: 1.4em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.7em;
+  position: relative;
 }
 
 .rowTextarea {
@@ -49,6 +50,14 @@
   cursor: pointer;
   -webkit-user-select: none;
   user-select: none;
+}
+
+.error {
+  color: red;
+  font-size: 8px;
+  position: absolute;
+  top: 100%;
+  left: 0.5em;
 }
 
 @media (min-width: 768px) {
