--- a/src/components/EventField/EventField.module.css
+++ b/src/components/EventField/EventField.module.css
@@ -11,10 +11,65 @@
   margin: 4em 0 1em 0;
 }
 
+.textRow {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.descriptionRow {
+  margin-top: 4em;
+}
 .error {
   color: red;
   font-size: 8px;
   position: absolute;
   top: 100%;
   left: 0.5em;
+}
+
+.text {
+  color: black;
+}
+
+.title .text {
+  font-size: 1em;
+  font-weight: bold;
+  line-height: 1em;
+}
+
+.date .text {
+  font-size: 12px;
+  padding: 1.2em 0;
+  line-height: 1em;
+}
+
+.participants .text {
+  font-size: 12px;
+  padding: 0.4em 0;
+  line-height: 1em;
+}
+
+.description {
+  margin-top: 4em;
+}
+
+.description .text {
+  font-size: 12px;
+}
+
+.label {
+  display: block;
+  font-size: 10px;
+  line-height: 1em;
+  color: #84919b;
+}
+
+.edit {
+  font-size: 10px;
+  padding: 0.4em 0;
+  line-height: 1.2em;
+  color: var(--blue);
+  cursor: pointer;
 }
