--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -1,30 +1,29 @@
 .eventForm {
   padding: 1.4em;
-  box-shadow: 3px 3px 5px #d9d9d9, -3px -3px 5px #d9d9d9;
+  box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9;
   display: none;
-  position: absolute;
-  left: calc(100% + 15px);
-  top: -1em;
   background-color: white;
+  position: fixed;
   width: 80vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.eventForm:focus,
+.eventForm:acive {
+  box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9;
 }
 
 .active {
-  display: block;
+  display: flex;
+  flex-direction: column;
   z-index: 2;
-}
-
-.button {
-  box-shadow: 1px 1px 2px #d9d9d9, -1px 1px 2px #d9d9d9;
-  display: inline-block;
-  border-radius: 2px;
-  border: none;
-  font-size: 12px;
-  background-color: transparent;
 }
 
 .buttonRow {
   display: flex;
+  margin-top: auto;
 }
 
 .close {
@@ -41,6 +40,24 @@
 
 @media (min-width: 768px) {
   .eventForm {
-    max-width: 340px;
+    max-width: 300px;
+    min-height: 340px;
+    position: absolute;
+    left: calc(100% + 15px);
+    top: -1em;
+    transform: initial;
+  }
+
+  .eventForm::before {
+    position: absolute;
+    z-index: -2;
+    content: "";
+    top: 1.5em;
+    right: calc(100% - 11px);
+    width: 20px;
+    border-top: 20px solid white;
+    border-left: 20px solid transparent;
+    filter: drop-shadow(0 -6px 3px #d9d9d9);
+    transform: rotate(-135deg);
   }
 }
