--- a/src/components/CalendarContainer/CalendarContainer.module.css
+++ b/src/components/CalendarContainer/CalendarContainer.module.css
@@ -1,7 +1,6 @@
 .calendarContainer {
   width: 90%;
   margin: 0 auto;
-  --blue: #189fff;
 }
 
 .navigation {
@@ -17,9 +16,9 @@
 
 .header {
   background-color: #f4f4f4;
-  padding-bottom: 0.5em;
+  padding-bottom: 1.1em;
   width: 100%;
-  height: 5em;
+  height: 6.3em;
   box-shadow: 0 2px 4px #b1b1b1;
 }
 
@@ -28,7 +27,7 @@
   margin: 0 auto;
   display: flex;
   align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: space-between;
   height: 100%;
 }
 
