--- a/src/components/Day/Day.module.css
+++ b/src/components/Day/Day.module.css
@@ -8,7 +8,8 @@
 
 .day:focus,
 .day:active {
-  box-shadow: 1px 1px #85c4f7 inset, -1px -1px #85c4f7 inset;
+  box-shadow: 1px 1px var(--focus-ring-color, #85c4f7) inset,
+    -1px -1px var(--focus-ring-color, #85c4f7) inset;
   outline: none;
 }
 
