--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,13 +1,13 @@
 .search {
   width: 100%;
-  height: 1.4em;
+  height: 1.8em;
   position: relative;
 }
 
 @media (min-width: 768px) {
   .search {
-    width: 15%;
+    width: 22%;
     min-width: 160px;
-    height: 1.4em;
+    max-width: 200px;
   }
 }
