--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,11 +1,19 @@
 .button {
-  box-shadow: 1px 1px 4px #b1b1b183, -1px -1px 4px #b1b1b183,
-    1px 1px 5px #d9d9d9 inset, -1px -1px 5px #d9d9d9 inset;
   display: inline-block;
   padding: 0.2em 1em;
   border-radius: 6px;
-  border: none;
+  /* border: 1px solid var(--grey, #b9b9b9);
+  box-shadow: 1px 1px 2px inset rgba(0, 0, 0, 0.1),
+    -1px -1px 2px inset rgba(0, 0, 0, 0.1); */
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.8),
+      rgba(255, 255, 255, 0.2) 50%,
+      transparent 51%
+    ),
+    linear-gradient(#ebebeb, #e0e0df);
+  box-shadow: 1px 1px 4px -2px #333, -1px -1px 2px -2px #333;
   font-size: 12px;
   background-color: transparent;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  border: none;
 }
