--- a/src/components/CalendarContainer/CalendarContainer.module.css
+++ b/src/components/CalendarContainer/CalendarContainer.module.css
@@ -4,7 +4,8 @@
 }
 
 .navigation {
-  padding: 0.8em 0;
+  padding: 1em 0;
+  display: flex;
 }
 
 .calendar {
@@ -16,9 +17,10 @@
 
 .header {
   background-color: #f4f4f4;
-  padding-bottom: 1.1em;
+  padding-bottom: 1em;
+  padding-top: 1em;
+  height: 7em;
   width: 100%;
-  height: 6.3em;
   box-shadow: 0 2px 4px #b1b1b1;
 }
 
@@ -26,10 +28,19 @@
   width: 90%;
   margin: 0 auto;
   display: flex;
-  align-items: flex-end;
+  flex-direction: column;
   justify-content: space-between;
   height: 100%;
 }
 
-@media (min-width) {
+@media (min-width: 768px) {
+  .header {
+    padding-top: 0;
+    padding-bottom: 1.1em;
+    height: 6.3em;
+  }
+  .headerContainer {
+    align-items: flex-end;
+    flex-direction: row;
+  }
 }
