--- a/src/components/Day/Day.module.css
+++ b/src/components/Day/Day.module.css
@@ -4,22 +4,40 @@
   padding: 0.2em;
   box-shadow: 1px 1px #ebebeb;
   position: relative;
+  /* to prevent grid cell from expanding */
+  min-height: 0;
+  min-width: 0;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .day:focus,
 .day:active {
-  box-shadow: 1px 1px var(--focus-ring-color, #85c4f7) inset,
-    -1px -1px var(--focus-ring-color, #85c4f7) inset;
+  box-shadow: 2px 2px var(--focus-ring-color, #85c4f7) inset,
+    -2px -2px var(--focus-ring-color, #85c4f7) inset;
   outline: none;
+  background-color: var(--focus-background, #e5f1f9);
 }
 
 .hasEvent {
   background-color: #c1e3fe;
 }
 
+.active {
+  overflow: visible;
+}
+
 .dayNumber {
   font-size: 12px;
   color: #b1b1b1;
+}
+
+:global .shortDay {
+  display: block;
+}
+
+:global .longDay {
+  display: none;
 }
 
 .event {
@@ -37,4 +55,14 @@
   line-height: 1em;
   padding-top: 0.2em;
   overflow: hidden;
+}
+
+@media (min-width: 768px) {
+  :global .shortDay {
+    display: none;
+  }
+
+  :global .longDay {
+    display: inline-block;
+  }
 }
