--- a/src/components/EventField/EventField.module.css
+++ b/src/components/EventField/EventField.module.css
@@ -5,17 +5,25 @@
   position: relative;
 }
 
+.rowWithError {
+  margin-bottom: 0.5em;
+}
+
+.rowEdited {
+  margin-bottom: 0.9em;
+}
+
 .rowTextarea {
   width: 100%;
   height: 7.3em;
-  margin: 2em 0 0;
+  margin: 2em 0 1em 0;
 }
 
 .textRow {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 .descriptionRow {
@@ -36,12 +44,13 @@
 .title .text {
   font-size: 1em;
   font-weight: bold;
-  line-height: 1em;
+  line-height: 0.9em;
+  margin-bottom: 1em;
 }
 
 .date .text {
   font-size: 12px;
-  padding: 1.2em 0;
+  margin-bottom: 1.2em;
   line-height: 1em;
 }
 
@@ -72,4 +81,13 @@
   line-height: 1.2em;
   color: var(--blue);
   cursor: pointer;
+}
+
+@media (min-width: 768px) and (pointer: fine) {
+  .edit {
+    display: none;
+  }
+  .textRow:hover .edit {
+    display: inline-block;
+  }
 }
