--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,5 +1,6 @@
 .navigation {
   display: flex;
   align-items: center;
-  min-width: 120px;
+  min-width: 180px;
+  justify-content: space-between;
 }
