--- a/src/index.css
+++ b/src/index.css
@@ -85,5 +85,7 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   --blue: #189fff;
   --deep-blue: #006fca;
+  --focus-background: #e5f1f9;
   --focus-ring-color: #85c4f7;
+  --grey: #b9b9b9;
 }
