add hiding events, showing on search

--- a/src/components/Close/Close.module.css
+++ b/src/components/Close/Close.module.css
@@ -1,6 +1,10 @@
 .close {
   color: #b1b1b1;
   font-size: 12px;
+  width: 12px;
+  height: 12px;
+  transform: translate(50%, -50%);
+  text-align: center;
   line-height: 0.8em;
   cursor: pointer;
   -webkit-user-select: none;
