--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,9 +2,6 @@
   display: inline-block;
   padding: 0.2em 1em;
   border-radius: 6px;
-  /* border: 1px solid var(--grey, #b9b9b9);
-  box-shadow: 1px 1px 2px inset rgba(0, 0, 0, 0.1),
-    -1px -1px 2px inset rgba(0, 0, 0, 0.1); */
   background: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.2) 50%,
@@ -16,4 +13,10 @@
   background-color: transparent;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   border: none;
+  cursor: pointer;
+}
+
+.button:focus,
+.button:active {
+  outline: none;
 }
