--- a/src/components/Day/Day.module.css
+++ b/src/components/Day/Day.module.css
@@ -1,7 +1,7 @@
 .day {
   width: 100%;
   height: 100%;
-  padding: 0.2em;
+  padding: 0.5em;
   box-shadow: 1px 1px #ebebeb;
   position: relative;
   /* to prevent grid cell from expanding */
@@ -28,7 +28,7 @@
 }
 
 .dayNumber {
-  font-size: 12px;
+  font-size: 10px;
   color: #b1b1b1;
 }
 
@@ -41,7 +41,7 @@
 }
 
 .event {
-  font-size: 10px;
+  font-size: 8px;
   padding: 0.4em 0;
   line-height: 1.2em;
   color: #84919b;
@@ -50,6 +50,10 @@
 
 .eventTitle {
   font-weight: bold;
+  padding-bottom: 0.4em;
+}
+.eventParticipants {
+  padding-bottom: 0.4em;
 }
 .eventDescription {
   line-height: 1em;
@@ -58,6 +62,13 @@
 }
 
 @media (min-width: 768px) {
+  .event {
+    font-size: 12px;
+  }
+
+  .dayNumber {
+    font-size: 12px;
+  }
   :global .shortDay {
     display: none;
   }
