add hiding search results, validate user input for new event

--- a/src/components/EventTextarea/EventTextarea.module.css
+++ b/src/components/EventTextarea/EventTextarea.module.css
@@ -13,3 +13,9 @@
 .eventTextarea::placeholder {
   color: #b1b1b1;
 }
+
+.eventTextarea:focus {
+  outline: none;
+  box-shadow: 2px 2px var(--focus-ring-color, #85c4f7) inset,
+    -2px -2px var(--focus-ring-color, #85c4f7) inset;
+}
