--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -27,6 +27,10 @@
   margin-top: auto;
 }
 
+:global .eventFormTriangle {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .eventForm {
     max-width: 300px;
@@ -37,16 +41,10 @@
     transform: initial;
   }
 
-  .eventForm::before {
-    position: absolute;
-    z-index: -2;
-    content: "";
+  :global .eventFormTriangle {
+    display: inline-block;
     top: 1.5em;
-    right: calc(100% - 11px);
-    width: 20px;
-    border-top: 20px solid white;
-    border-left: 20px solid transparent;
-    filter: drop-shadow(0 -6px 3px #d9d9d9);
+    right: calc(100% - 6px);
     transform: rotate(-135deg);
   }
 }
