--- a/src/components/SearchResults/SearchResults.module.css
+++ b/src/components/SearchResults/SearchResults.module.css
@@ -14,6 +14,7 @@
   box-shadow: 2px 2px 5px #d9d9d9, -2px -2px 5px #d9d9d9;
   max-height: 240px;
   overflow-y: scroll;
+  position: relative;
 }
 
 .container::-webkit-scrollbar {
@@ -43,4 +44,11 @@
   background: #7a7a7a;
   border-radius: 10px;
   width: 5px;
+}
+
+:global .searchResultsTriangle {
+  display: inline-block;
+  top: 11px;
+  left: 1.5em;
+  transform: rotate(-45deg);
 }
