--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -14,6 +14,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   border: none;
   cursor: pointer;
+  line-height: 1.4em;
 }
 
 .button:focus,
