--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -41,10 +41,21 @@
     transform: initial;
   }
 
+  .eventForm.left {
+    left: initial;
+    right: calc(100% + 15px);
+  }
+
   :global .eventFormTriangle {
     display: inline-block;
     top: 1.5em;
     right: calc(100% - 6px);
     transform: rotate(-135deg);
+  }
+
+  .left :global(.eventFormTriangle) {
+    right: initial;
+    left: calc(100% - 6px);
+    transform: rotate(45deg);
   }
 }
