--- a/src/components/EventTextarea/EventTextarea.module.css
+++ b/src/components/EventTextarea/EventTextarea.module.css
@@ -1,5 +1,5 @@
 .eventTextarea {
-  box-shadow: 1px 2px 2px #d3d3d3 inset, -1px -1px 2px #d3d3d3 inset;
+  border: 1px solid var(--medium-grey, #84919b);
   padding-left: 0.5em;
   padding-top: 0.5em;
   font-size: 12px;
@@ -7,7 +7,6 @@
   width: 100%;
   display: inline-block;
   border-radius: 2px;
-  border: none;
 }
 
 .eventTextarea::placeholder {
@@ -16,6 +15,6 @@
 
 .eventTextarea:focus {
   outline: none;
-  box-shadow: 2px 2px var(--focus-ring-color, #85c4f7) inset,
-    -2px -2px var(--focus-ring-color, #85c4f7) inset;
+  border-width: 2px;
+  box-shadow: none;
 }
