--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -2,11 +2,7 @@
   display: inline-block;
   padding: 0.2em 1em;
   border-radius: 6px;
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.8),
-      rgba(255, 255, 255, 0.2) 50%,
-      transparent 51%
-    ),
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.2) 50%, transparent 51%),
     linear-gradient(#ebebeb, #e0e0df);
   box-shadow: 1px 1px 4px -2px #333, -1px -1px 2px -2px #333;
   font-size: 12px;
@@ -20,4 +16,7 @@
 .button:focus,
 .button:active {
   outline: none;
+}
+
+.disabled {
 }
