--- a/src/components/Close/Close.module.css
+++ b/src/components/Close/Close.module.css
@@ -3,13 +3,16 @@
   font-size: 12px;
   width: 12px;
   height: 12px;
-  transform: translate(50%, -50%);
   text-align: center;
-  line-height: 0.8em;
+  line-height: 0.7em;
   cursor: pointer;
   -webkit-user-select: none;
   user-select: none;
   position: absolute;
-  top: 0.7rem;
-  right: 0.7rem;
+  top: 0.8rem;
+  right: 0.8rem;
+}
+
+.icon {
+  width: 100%;
 }
