--- a/src/components/EventField/EventField.module.css
+++ b/src/components/EventField/EventField.module.css
@@ -1,16 +1,8 @@
 .row {
   width: 100%;
   height: 1.7em;
-  margin-bottom: 0.2em;
-  position: relative;
-}
-
-.rowWithError {
-  margin-bottom: 0.5em;
-}
-
-.rowEdited {
   margin-bottom: 0.9em;
+  position: relative;
 }
 
 .rowTextarea {
@@ -20,9 +12,7 @@
 }
 
 .textRow {
-  display: flex;
   width: 100%;
-  justify-content: space-between;
   align-items: flex-start;
 }
 
@@ -39,7 +29,6 @@
 
 .text {
   color: black;
-  width: 90%;
 }
 
 .title .text {
@@ -73,21 +62,8 @@
   display: block;
   font-size: 10px;
   line-height: 1em;
-  color: #84919b;
-}
-
-.edit {
-  font-size: 10px;
-  line-height: 1.2em;
-  color: var(--blue);
-  cursor: pointer;
+  color: var(--medium-grey, #84919b);
 }
 
 @media (min-width: 768px) and (pointer: fine) {
-  .edit {
-    display: none;
-  }
-  .textRow:hover .edit {
-    display: inline-block;
-  }
 }
