--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -1,9 +1,9 @@
 .eventForm {
   padding: 2em 1.4em 1.4em;
   /* box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9; */
-  background-color: #9599a0;
+  /* background-color: #9599a0; */
   display: none;
-  background-color: white;
+  background-color: var(--pastel, #c3c8ce);
   position: fixed;
   width: 80vw;
   top: 50%;
