--- a/src/components/EventForm/EventForm.module.css
+++ b/src/components/EventForm/EventForm.module.css
@@ -3,7 +3,7 @@
   /* box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9; */
   /* background-color: #9599a0; */
   display: none;
-  background-color: var(--pastel, #c3c8ce);
+  background-color: whitesmoke;
   position: fixed;
   width: 80vw;
   top: 50%;
