--- a/src/components/AddButton/AddButton.module.css
+++ b/src/components/AddButton/AddButton.module.css
@@ -1,9 +1,44 @@
 .addButton {
-  background-color: var(--deep-blue, #006fca);
+  background-color: none;
+  position: relative;
   height: 100%;
   display: inline-block;
-  color: white;
-  font-size: 12px;
-  border: 1px solid var(--deep-blue, #006fca);
+  background-color: transparent;
+  border: none;
   font-weight: bold;
+  width: 3em;
+  height: 3em;
+  border-radius: 50%;
+  background-color: var(--focus-ring-color, #85c4f7);
+  box-shadow: 2px 2px 15px -2px rgba(0, 0, 0, 0.4), -2px -2px 15px -2px rgba(0, 0, 0, 0.4);
+}
+
+.addButton:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  height: 2px;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  background-color: white;
+}
+
+.addButton:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  height: 2px;
+  transform: translate(-50%, -50%) rotate(90deg);
+  z-index: 1;
+  background-color: white;
+}
+
+@media (min-width: 768px) and (pointer: fine) {
+  .addButton {
+    display: none;
+  }
 }
