--- a/src/components/AddForm/AddForm.module.css
+++ b/src/components/AddForm/AddForm.module.css
@@ -1,37 +1,42 @@
-.addForm {
-  position: absolute;
-  top: 2.7em;
-  left: 0;
-  background-color: white;
-  box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9;
-  background-color: white;
-  z-index: 2;
+.eventForm {
+  padding: 3em 1.4em 1.4em;
+  /* box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9; */
+  /* background-color: #9599a0; */
   display: none;
-  width: 100%;
-  padding: 1.4em;
-  min-width: 140px;
-  width: 25%;
-  max-width: 300px;
-  width: 90vw;
+  background-color: whitesmoke;
+  position: fixed;
+  width: 80vw;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: initial;
+  border-radius: 0.3em;
 }
+
+.eventForm:focus,
+.eventForm:active {
+  /* box-shadow: 3px 6px 5px #d9d9d9, -3px -2px 5px #d9d9d9; */
+}
+
 .active {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  z-index: 2;
 }
 
-.inputWrapper {
-  height: 1.7em;
-  margin-bottom: 0.5em;
+.buttonRow {
+  display: flex;
+  margin-top: auto;
 }
 
-.error {
-  color: red;
-  font-size: 8px;
-  margin-bottom: 0.6em;
+.buttonWrapper {
+  height: 100%;
+  margin-right: 1em;
 }
 
-:global .addEventTriangle {
-  display: inline-block;
-  top: -6px;
-  left: 1.5em;
-  transform: rotate(-45deg);
+@media (min-width: 768px) {
+  .eventForm {
+    max-width: 300px;
+    min-height: 330px;
+  }
 }
