--- a/src/components/CalendarContainer/CalendarContainer.module.css
+++ b/src/components/CalendarContainer/CalendarContainer.module.css
@@ -4,7 +4,6 @@
 }
 
 .navigation {
-  padding: 1em 0;
   display: flex;
   align-items: center;
 }
@@ -17,7 +16,6 @@
 }
 
 .header {
-  background: var(--dark);
   padding-bottom: 1em;
   padding-top: 1em;
   height: 7em;
@@ -28,9 +26,16 @@
   width: 90%;
   margin: 0 auto;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: space-between;
   height: 100%;
+}
+
+.addEvent {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 5;
 }
 
 @media (min-width: 768px) {
